--- a/scss/portfolio.scss
+++ b/scss/portfolio.scss
@@ -33,6 +33,10 @@
                 img{
                     width: 35px;
                     height: 35px;
+                    
+                    &:hover{
+                        cursor: pointer;
+                    }
                 }
             }
             button.right-arrow{
@@ -44,6 +48,10 @@
                 img{
                     width: 35px;
                     height: 35px;
+                    
+                    &:hover{
+                        cursor: pointer;
+                    }
                 }
             }
         }
@@ -59,6 +67,12 @@
                     height: 160px;
                     max-width: 100%;
                     margin-top: 120px;
+                    &:hover{
+                        cursor: pointer;
+                    }
+                }
+                &:hover{
+                    cursor: auto;
                 }
             }
         }
@@ -126,6 +140,10 @@
                 img{
                     width: 44px;
                     height: 44px;
+                    
+                    &:hover{
+                        cursor: pointer;
+                    }
                 }
             }
             button.right-arrow{
@@ -138,6 +156,10 @@
                 img{
                     width: 44px;
                     height: 44px;
+                    
+                    &:hover{
+                        cursor: pointer;
+                    }
                 }
             }
         }
@@ -153,6 +175,12 @@
                     height: 210px;
                     max-width: 100%;
                     margin-top: 120px;
+                    &:hover{
+                        cursor: pointer;
+                    }
+                }
+                &:hover{
+                    cursor: auto;
                 }
             }
         }
@@ -221,6 +249,9 @@
                 img{
                     width: 44px;
                     height: 44px;
+                    &:hover{
+                        cursor: pointer;
+                    }
                 }
             }
             button.right-arrow{
@@ -233,6 +264,10 @@
                 img{
                     width: 44px;
                     height: 44px;
+                    
+                    &:hover{
+                        cursor: pointer;
+                    }
                 }
             }
         }
@@ -248,6 +283,12 @@
                     height: 210px;
                     max-width: 100%;
                     margin-top: 120px;
+                    &:hover{
+                        cursor: pointer;
+                    }
+                }
+                &:hover{
+                    cursor: auto;
                 }
             }
         }
@@ -317,6 +358,10 @@
                 img{
                     width: 44px;
                     height: 44px;
+                    
+                    &:hover{
+                        cursor: pointer;
+                    }
                 }
             }
             button.right-arrow{
@@ -329,6 +374,10 @@
                 img{
                     width: 44px;
                     height: 44px;
+                    
+                    &:hover{
+                        cursor: pointer;
+                    }
                 }
             }
         }
@@ -344,7 +393,14 @@
                     height: 210px;
                     max-width: 100%;
                     margin-top: 120px;
+                   &:hover{
+                        cursor: pointer;
+                    }
                 }
+                &:hover{
+                    cursor: auto;
+                }
+            
             }
         }
         .portfolio-text{
@@ -412,6 +468,10 @@
                 img{
                     width: 44px;
                     height: 44px;
+                    
+                    &:hover{
+                        cursor: pointer;
+                    }
                 }
             }
             button.right-arrow{
@@ -424,6 +484,10 @@
                 img{
                     width: 44px;
                     height: 44px;
+                    
+                    &:hover{
+                        cursor: pointer;
+                    }
                 }
             }
         }
@@ -439,6 +503,12 @@
                     height: 210px;
                     max-width: 100%;
                     margin-top: 120px;
+                    &:hover{
+                        cursor: pointer;
+                    }
+                }
+                &:hover{
+                    cursor: auto;
                 }
             }
         }
@@ -507,6 +577,10 @@
                 img{
                     width: 44px;
                     height: 44px;
+                    
+                    &:hover{
+                        cursor: pointer;
+                    }
                 }
             }
             button.right-arrow{
@@ -519,6 +593,10 @@
                 img{
                     width: 44px;
                     height: 44px;
+                    
+                    &:hover{
+                        cursor: pointer;
+                    }
                 }
             }
         }
@@ -534,6 +612,12 @@
                     height: 210px;
                     max-width: 100%;
                     margin-top: 120px;
+                    &:hover{
+                        cursor: pointer;
+                    }
+                }
+                &:hover{
+                    cursor: auto;
                 }
             }
         }
@@ -600,6 +684,10 @@
                 img{
                     width: 44px;
                     height: 44px;
+                    
+                    &:hover{
+                        cursor: pointer;
+                    }
                 }
             }
             button.right-arrow{
@@ -612,6 +700,10 @@
                 img{
                     width: 44px;
                     height: 44px;
+                    
+                    &:hover{
+                        cursor: pointer;
+                    }
                 }
             }
         }
@@ -627,6 +719,12 @@
                     height: 220px;
                     max-width: 100%;
                     margin-top: 120px;
+                    &:hover{
+                        cursor: pointer;
+                    }
+                }
+                &:hover{
+                    cursor: auto;
                 }
             }
         }
@@ -693,6 +791,10 @@
                 img{
                     width: 44px;
                     height: 44px;
+                    
+                    &:hover{
+                        cursor: pointer;
+                    }
                 }
             }
             button.right-arrow{
@@ -705,6 +807,10 @@
                 img{
                     width: 44px;
                     height: 44px;
+                    
+                    &:hover{
+                        cursor: pointer;
+                    }
                 }
             }
         }
@@ -720,6 +826,12 @@
                     height: 220px;
                     max-width: 100%;
                     margin-top: 120px;
+                    &:hover{
+                        cursor: pointer;
+                    }
+                }
+                &:hover{
+                    cursor: auto;
                 }
             }
         }
@@ -786,6 +898,10 @@
                 img{
                     width: 44px;
                     height: 44px;
+                    
+                    &:hover{
+                        cursor: pointer;
+                    }
                 }
             }
             button.right-arrow{
@@ -798,6 +914,10 @@
                 img{
                     width: 44px;
                     height: 44px;
+                    
+                    &:hover{
+                        cursor: pointer;
+                    }
                 }
             }
         }
@@ -813,6 +933,12 @@
                     height: 220px;
                     max-width: 100%;
                     margin-top: 120px;
+                    &:hover{
+                        cursor: pointer;
+                    }
+                }
+                &:hover{
+                    cursor: auto;
                 }
             }
         }
@@ -879,6 +1005,10 @@
                 img{
                     width: 44px;
                     height: 44px;
+                    
+                    &:hover{
+                        cursor: pointer;
+                    }
                 }
             }
             button.right-arrow{
@@ -891,6 +1021,10 @@
                 img{
                     width: 44px;
                     height: 44px;
+                    
+                    &:hover{
+                        cursor: pointer;
+                    }
                 }
             }
         }
@@ -906,6 +1040,12 @@
                     height: 220px;
                     max-width: 100%;
                     margin-top: 120px;
+                    &:hover{
+                        cursor: pointer;
+                    }
+                }
+                &:hover{
+                    cursor: auto;
                 }
             }
         }
